runs/github.com/p/potockan/text-clustering-basing-on-string-metrics/logs/test-notebook-Python-python_mini_batch-socket_connect.ipynb-2020-07-15T14.12.txt
[I 200715 14:13:04 inrepo:36] Testing notebook Python/python_mini_batch/socket_connect.ipynb
[I 200715 14:13:05 inrepo:45] Found kernel python3
[I 200715 14:13:05 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
# -*- coding: utf-8 -*-
"""
Created on Mon Aug 31 19:48:40 2015

@author: natalia
"""


#################
# Echo client program
import socket

HOST = "192.168.0.11"
PORT = 50007
s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
s.connect((HOST, PORT))
s.sendall(str([1,2,3,3]))
data = s.recv(1024)
s.close()
print 'Received', repr(data)
#################

#################
# Echo server program
import socket

HOST = ''                 # Symbolic name meaning all available interfaces
PORT = 50007              # Arbitrary non-privileged port
s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
s.bind((HOST, PORT))
s.listen(1)
conn, addr = s.accept()
print 'Connected by', addr
while 1:
    data = conn.recv(1024)
    if not data: break
    conn.sendall(data)
conn.close()
#################
------------------

[0;36m  File [0;32m"<ipython-input-1-eb4511c9e4b8>"[0;36m, line [0;32m20[0m
[0;31m    print 'Received', repr(data)[0m
[0m                   ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-eb4511c9e4b8>, line 20)


Container exited with status: {'Error': None, 'StatusCode': 1}
